# py-cpuinfo2

./: .gitignore  .pre-commit-config.yaml  ChangeLog  README.md  pyproject.toml
.github/workflows/: ci.yml
cpuinfo/: __init__.py  __main__.py  cpuinfo.py
example/: example_pyinstaller.py
tests/: conftest.py  helpers.py  test_bug_152_cpu_zero.py  test_cli.py  test_free_bsd_11_x86_64.py  test_haiku_x86_32.py  test_haiku_x86_64.py  test_haiku_x86_64_beta_1_ryzen_7.py  test_linux_aarch64_64.py  test_linux_alt_p9_mipsel_bfk3.py  test_linux_beagle_bone_arm.py  test_linux_debian_8_7_1_ppc64le.py  test_linux_debian_8_x86_64.py  test_linux_fedora_24_ppc64le.py  test_linux_fedora_24_x86_64.py  test_linux_fedora_29_x86_64_ryzen_7.py  test_linux_fedora_5_s390x.py  test_linux_gentoo_2_2_x86_64.py  test_linux_mips64el_loongson3A3000.py  test_linux_new_world_loongarch64.py  test_linux_odroid_c2_aarch64.py  test_linux_odroid_xu3_arm_32.py  test_linux_old_world_loongarch64.py  test_linux_raspberry_pi_model_b_arm.py  test_linux_rhel_7_3_ppc64le.py  test_linux_ubuntu_16_04_x86_64.py  test_linux_ubuntu_21_04_riscv64.py  test_linux_ubuntu_22_04_x86_64.py  test_open_indiana_5_11_x86_64_ryzen_7.py  test_osx_10_12_x86_64.py  test_osx_10_9_x86_64.py  test_osx_arm64_m2_max.py  test_parse_errors.py  test_pcbsd_10_x86_64.py  test_pyinstaller.py  test_solaris_11_x86_32.py  test_true_os_18_x86_64_ryzen_7.py  test_windows_10_x86_64.py  test_windows_10_x86_64_ryzen_7.py  test_windows_8_x86_64.py
tools/: get_system_info.py
