[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-cpuinfo2"
dynamic = ["version"]
description = "Get CPU info with pure Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Matthew Brennan Jones", email = "matthew.brennan.jones@gmail.com" },
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
maintainers = [
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
cpuinfo = "cpuinfo.__main__:main"

[project.urls]
Homepage = "https://github.com/akx/py-cpuinfo2"
Upstream = "https://github.com/workhorsy/py-cpuinfo"

[tool.hatch.version]
path = "cpuinfo/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cpuinfo",
    "/tests",
    "ChangeLog",
]

[tool.hatch.build.targets.wheel]
include = [
    "/cpuinfo",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "PERF401",
    "PLC0415",
    "RUF015",
    "RUF019",
    "SIM102",
    "SIM103",
    "SIM118",
    "UP",
]
ignore = [
    "E501",
    "UP030",
    "UP032",
]
exclude = ["tools/get_system_info.py"]

[tool.ruff.format]
indent-style = "tab"
quote-style = "preserve"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
